--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
     <string name="app_name">movie_sample</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- button -->
     <string name="button_add">Add</string>
     <string name="button_play">Play</string>
     <string name="button_info">Info</string>
+
+    <!-- content description -->
+    <string name="movie_list">movie_list</string>
+
+    <!-- Genre -->
 </resources>
